crates/swc_ecma_parser/tests/test262-error-references/fail/814e26b2395ad89d.module.js.stderr
error: Unexpected eof
 --> $DIR/tests/test262-parser/fail/814e26b2395ad89d.module.js:1:7
  |
1 | export 
  |       ^

